[package]
name = "rp_client"
version = "0.3.7"
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10"
native-tls = "0.2"

[dev-dependencies]
lazy_static = "1.4"